-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.1.0-beta1
-
d12c8806ac8f02ad7f9ed741e90fd1c52c5dd3b9 561841b93b9335cb3fda6d846cbe873a0517d359
Steps to reproduce:
- open/create QtQuick related project and profile it
- go to Timeline, select one the displayed items and add a note or two..
- use the "Select Range" feature to select a smaller range (without these added notes)
- right click at this range and trigger "Analyze Current Range"
- right click again on the timeline and trigger "Analyze Full Range"
Current result:
- notes are gone
Expected result:
- notes are still accessible