QmlProfiler: Use current restriction range when saving notes

We don't want to clear notes outside the current restriction as those
are still valid and need to be available for later reloading.

Change-Id: If3e75ff2b2ab9a93578c5ca63f1b4a2f539dc802
Task-number: QTCREATORBUG-16542
Reviewed-by: Christian Kandeler <christian.kandeler@theqtcompany.com>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>